review some spacing and display issue

--- a/app/assets/stylesheets/pages/_order_index.scss
+++ b/app/assets/stylesheets/pages/_order_index.scss
@@ -20,6 +20,7 @@
 
 .order-list-item {
   max-width: 400px;
+  min-height: 365px;
   border: 1px solid $primary;
   margin: 20px auto;
   padding-bottom: 10px;
